<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FTEReader</string>
    <string name="empty_string"></string>
    <string name="fbreader_menu_catalogue">பொருளடக்கம்</string>
    <string name="fbreader_menu_progress">நிலை</string>
    <string name="fbreader_menu_brightness">ஒளிர்வு</string>
    <string name="fbreader_menu_setting">அமைப்பு</string>
    <string name="fbreader_menu_more_setting">கூடுதல் அமைப்புகள்</string>

    <string name="fbreader_progress_tips">%1$d/%2$d தற்போதைய பக்கம் %3$.2f</string>
    <string name="fbreader_progress_read_time">%d ம %d நிமி படிக்கலாம்</string>
    <string name="fbreader_progress_previous_chapter">முந்தைய அத்தியாயம்</string>
    <string name="fbreader_progress_next_chapter">அடுத்த அத்தியாயம்</string>

    <string name="fbreader_brightness_background_type_daily">வெள்ளை</string>
    <string name="fbreader_brightness_background_type_fresh">பச்சை</string>
    <string name="fbreader_brightness_background_type_light_yellow">மஞ்சள்</string>
    <string name="fbreader_brightness_background_type_light_blue">நீலம்</string>
    <string name="fbreader_brightness_background_type_night">இரவு</string>


    <string name="fbreader_setting_turn_page">Animation</string>
    <string name="fbreader_setting_turn_page_type_simulation">Curl</string>
    <string name="fbreader_setting_turn_page_type_shift">Shift</string>
    <string name="fbreader_setting_turn_page_type_slide">Slide</string>
    <string name="fbreader_setting_turn_page_type_none">NA</string>
    <string name="fbreader_setting_font">எழுத்துரு</string>

    <string name="fbreader_unknown">தெரியாத</string>

    <string name="fbreader_catalogue_empty">பொருளடக்கம் இல்லை</string>

    <string name="fbreader_bookmark">புத்தகக்குறி</string>
    <string name="fbreader_bookmark_empty">புத்தகக்குறி ஏதும் இல்லை.</string>
    <string name="fbreader_bookmark_add_success">புத்தகக்குறி சேர்க்கப்பட்டது</string>
    <string name="fbreader_bookmark_delete_success">புத்தகக்குறி நீக்கப்பட்டது</string>

    <string name="fbreader_more_setting_line_spacing">வரி இடைவெளி</string>
    <string name="fbreader_more_setting_line_spacing_type_minimum">நெருக்கமான</string>
    <string name="fbreader_more_setting_line_spacing_type_less">குறைவான</string>
    <string name="fbreader_more_setting_line_spacing_type_moderate">சீரான</string>
    <string name="fbreader_more_setting_line_spacing_type_more">அதிகம்</string>
    <string name="fbreader_more_setting_line_spacing_type_maximum">மிக அதிகம்</string>

    <string name="fbreader_more_setting_line_spacing_show_chapter_name">தலைப்பைக் காட்டு</string>
    <string name="fbreader_more_setting_line_spacing_show_battery_time">நேரம் (ம) மின்கலம்</string>

    <string name="fbreader_system">இயல்புநிலை</string>

    <string name="fbreader_turn_chapter_tips_cant_previous">இது முதல் அத்தியாயம்</string>
    <string name="fbreader_turn_chapter_tips_cant_next">இது இறுதி அத்தியாயம்</string>

    <string name="fbreader_more_setting_alignment">உரை சீரமைப்பு</string>
    <string name="fbreader_more_setting_alignment_default">இயல்புநிலை</string>
    <string name="fbreader_more_setting_alignment_left">வலது</string>
    <string name="fbreader_more_setting_alignment_right">இடது</string>
    <string name="fbreader_more_setting_alignment_center">மையமாக</string>
    <string name="fbreader_more_setting_alignment_justified">ஓரச்சீரமை</string>

    <string name="fbreader_selection_highlight">குறித்துவை</string>
    <string name="fbreader_selection_remove_highlight">நீக்கு</string>
    <string name="fbreader_selection_copy">நகலெடு</string>
    <string name="fbreader_selection_share">பகிர்</string>
    <string name="fbreader_selection_dictionary">அகராதி</string>
</resources>