<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#FFFFFF"
              android:orientation="vertical">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="#ffffff">

        <ImageView
                android:id="@+id/id_activity_fbreader_setting_back"
                android:layout_width="44dp"
                android:layout_height="match_parent"
                android:padding="12dp"
                android:tintMode="src_in"
                android:tint="#000000"
                android:src="@drawable/ic_fbreader_back" tools:ignore="ContentDescription"/>

        <org.geometerplus.android.fbreader.weight.FBReaderPercentTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/fbreader_menu_more_setting"
                android:textColor="#000000"
                android:textSize="17sp"/>

        <View android:layout_width="match_parent"
              android:layout_alignParentBottom="true"
              android:layout_height="0.5dp"
              android:background="#eeeeee"/>
    </RelativeLayout>

    <!--<androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="56dp">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff">

            <ImageView
                    android:id="@+id/id_activity_fbreader_setting_back"
                    android:layout_width="56dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:scaleType="centerInside"
                    android:padding="12dp"
                    android:src="@drawable/ic_arrow_back_black_24dp"
                    tools:ignore="ContentDescription"/>

            <org.geometerplus.android.fbreader.weight.FBReaderPercentTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    android:text="@string/fbreader_menu_more_setting"
                    android:textColor="#000000"
                    android:textSize="17sp"/>

            <View android:layout_width="match_parent"
                  android:layout_alignParentBottom="true"
                  android:layout_height="0.5dp"
                  android:background="#eeeeee"/>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>-->
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:orientation="vertical"
                    android:padding="17dp">

                <org.geometerplus.android.fbreader.weight.FBReaderPercentTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fbreader_more_setting_line_spacing"
                        android:textColor="#000000"
                        android:textSize="14sp"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="17dp"
                        android:background="@drawable/bg_fbreader_setting_line_height"
                        android:orientation="horizontal">

                    <org.geometerplus.android.fbreader.weight.FBReaderPercentTextView
                            android:id="@+id/id_activity_fbreader_setting_line_height_small"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/fbreader_more_setting_line_spacing_type_minimum"
                            android:textColor="#000000"
                            android:textSize="@dimen/fbreader_more_settings_linespace_size"/>

                    <org.geometerplus.android.fbreader.weight.FBReaderPercentTextView
                            android:id="@+id/id_activity_fbreader_setting_line_height_small_middle"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/fbreader_more_setting_line_spacing_type_less"
                            android:textColor="#000000"
                            android:textSize="@dimen/fbreader_more_settings_linespace_size"/>

                    <org.geometerplus.android.fbreader.weight.FBReaderPercentTextView
                            android:id="@+id/id_activity_fbreader_setting_line_height_middle"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/fbreader_more_setting_line_spacing_type_moderate"
                            android:textColor="#000000"
                            android:textSize="@dimen/fbreader_more_settings_linespace_size"/>

                    <org.geometerplus.android.fbreader.weight.FBReaderPercentTextView
                            android:id="@+id/id_activity_fbreader_setting_line_height_big_middle"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/fbreader_more_setting_line_spacing_type_more"
                            android:textColor="#000000"
                            android:textSize="@dimen/fbreader_more_settings_linespace_size"/>

                    <org.geometerplus.android.fbreader.weight.FBReaderPercentTextView
                            android:id="@+id/id_activity_fbreader_setting_line_height_big"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/fbreader_more_setting_line_spacing_type_maximum"
                            android:textColor="#000000"
                            android:textSize="@dimen/fbreader_more_settings_linespace_size"/>
                </LinearLayout>

            </LinearLayout>
            <View android:layout_width="match_parent" android:layout_height="0.5dp"
                  android:background="#eeeeee"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:orientation="vertical"
                    android:padding="17dp">

                <org.geometerplus.android.fbreader.weight.FBReaderPercentTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fbreader_more_setting_alignment"
                        android:textColor="#000000"
                        android:textSize="14sp"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="17dp"
                        android:background="@drawable/bg_fbreader_setting_line_height"
                        android:orientation="horizontal">

                    <org.geometerplus.android.fbreader.weight.FBReaderPercentTextView
                            android:id="@+id/id_activity_fbreader_setting_alignment_default"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/fbreader_more_setting_alignment_default"
                            android:textColor="#000000"
                            android:textSize="@dimen/fbreader_more_settings_linespace_size"/>

                    <org.geometerplus.android.fbreader.weight.FBReaderPercentTextView
                            android:id="@+id/id_activity_fbreader_setting_alignment_left"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/fbreader_more_setting_alignment_left"
                            android:textColor="#000000"
                            android:textSize="@dimen/fbreader_more_settings_linespace_size"/>

                    <org.geometerplus.android.fbreader.weight.FBReaderPercentTextView
                            android:id="@+id/id_activity_fbreader_setting_alignment_right"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/fbreader_more_setting_alignment_right"
                            android:textColor="#000000"
                            android:textSize="@dimen/fbreader_more_settings_linespace_size"/>

                    <org.geometerplus.android.fbreader.weight.FBReaderPercentTextView
                            android:id="@+id/id_activity_fbreader_setting_alignment_center"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/fbreader_more_setting_alignment_center"
                            android:textColor="#000000"
                            android:textSize="@dimen/fbreader_more_settings_linespace_size"/>

                    <org.geometerplus.android.fbreader.weight.FBReaderPercentTextView
                            android:id="@+id/id_activity_fbreader_setting_alignment_justified"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/fbreader_more_setting_alignment_justified"
                            android:textColor="#000000"
                            android:textSize="@dimen/fbreader_more_settings_linespace_size"/>
                </LinearLayout>
            </LinearLayout>

            <View android:layout_width="match_parent" android:layout_height="0.5dp"
                  android:background="#eeeeee"/>

            <RelativeLayout
                    android:id="@+id/id_activity_fbreader_setting_show_chapter_name_container"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:background="#ffffff"
                    android:paddingStart="17dp"
                    android:paddingEnd="16dp">

                <org.geometerplus.android.fbreader.weight.FBReaderPercentTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/fbreader_more_setting_line_spacing_show_chapter_name"
                        android:textColor="#000000" tools:ignore="RelativeOverlap"/>

                <Switch
                        android:id="@+id/id_activity_fbreader_setting_show_chapter_name"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"/>
            </RelativeLayout>

            <View android:layout_width="match_parent" android:layout_height="0.5dp"
                  android:background="#eeeeee"/>

            <RelativeLayout
                    android:id="@+id/id_activity_fbreader_setting_show_time_container"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginTop="0.5dp"
                    android:background="#ffffff"
                    android:paddingStart="17dp"
                    android:paddingEnd="16dp">

                <org.geometerplus.android.fbreader.weight.FBReaderPercentTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/fbreader_more_setting_line_spacing_show_battery_time"
                        android:textColor="#000000" tools:ignore="RelativeOverlap"/>

                <Switch
                        android:id="@+id/id_activity_fbreader_setting_show_time"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"/>
            </RelativeLayout>

            <View android:layout_width="match_parent" android:layout_height="0.5dp"
                  android:background="#eeeeee"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>